Added getRandomquote with parameters + added tests for said route
